get some tests in place

--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   ],
   "main": "index.js",
   "devDependencies": {
-    "stylus": "*"
+    "coffee-script": "*",
+    "mocha": "*",
+    "should": "*",
+    "stylus": "*",
+    "accord": "*"
   },
   "scripts": {
     "test": "mocha"
