--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "grid"
   ],
   "license": "MIT",
-  "repository": [
-    {
-      "type": "git",
-      "url": "https://github.com/carrot/grate.git"
-    }
-  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/carrot/grate.git"
+  },
   "main": "index.js",
   "devDependencies": {
     "coffee-script": "*",
