--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "framework",
     "grid"
   ],
-  "license": "MIT",
+  "license": "GPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/carrot/grate.git"
